<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Baseball Score Keeper</string>
    <string name="action_settings">Settings</string>
    <string name="large_text"><u>Little League Score Keeper</u></string>
    <string name="current_team">Current Team:</string>
    <string name="home">Home</string>
    <string name="home_score">0</string>
    <string name="visitor">Visitor</string>
    <string name="visitor_score">0</string>
    <string name="strike">Strike</string>
    <string name="ball">Ball</string>
    <string name="foul">Foul</string>
    <string name="out">Out</string>
    <string name="default_count">0</string>
    <string name="run">Run</string>
    
</resources>
